syntax = "proto3";

option csharp_namespace = "Winner.OAuth.GrpcService";

package password;

service Password{
	rpc Reset (PasswordResetRequestDTO) returns (PasswordResetResponseDTO);
}

message PasswordResetRequestDTO{
	PasswordType pwdType=1;//密码类型
	string newPwd=2;//新密码，使用rsa加密
	IdentityValidateType validateType=3;//身份验证方式	
	string validateCode=4;//验证码，使用rsa加密，通过ValidateType判断验证码是什么
	string userCode = 5;//用户账号
	string encodeType = 6;//密文编码方式（base64 / base58 / hex）
	int32 clientSource=7;
	string clientSystem=8;
	enum PasswordType {
		LoginPassword=0;//登录密码
		PaymentPassword=1;//支付密码
	}
	enum IdentityValidateType{
		SmsValidation=0;//使用短信做身份验证
		OldPasswordValidation=1;//使用旧密码做身份验证
	}	
}
message PasswordResetResponseDTO{
	string retCode=1;
	string retMsg=2;
}